--- a/cyclistic.Rmd
+++ b/cyclistic.Rmd
@@ -1,37 +1,40 @@
 ---
-output:
+title: "Cyclistic Bike-Share User Analysis by R"
+author: "Adela Xu"
+date: "2024-07-12"
+output: 
+  md_document: default
   pdf_document: default
+  word_document: default
   html_document: default
 ---
 
-![](divvyfile-1-900x600.jpg)
+# Cyclistic Bike-Share User Analysis by R
 
----
-title: "Cyclistic Bike-Share Marketing Analysis by R"
-author: "Adela Xu"
-date: "2024-07-12"
-output: pdf_document
----
+**Author:** Adela Xu  
+**Date:** 2024-07-12
 
-## **Introduction**
-
-This case study is a capstone project for the Google Data Analyst Professional Certificate. In this project, I employed analytical and data visualization skills to address a marketing problem for Cyclistic, a fictional bike share company in Chicago.
-
-### **Scenario**
-
-I am a junior data analyst on the marketing analytics team at Cyclistic, a bike-share company in Chicago. The director of marketing believes that the company's future success depends on increasing the number of annual subscribers. To achieve this, our team aims to understand how casual customers and annual subscribers use Cyclistic bikes differently. With these insights, we will design a new marketing strategy to convert casual customers into annual subscribers.
+## **Background**
 
 ### **About the company**
 
-In 2016, Cyclistic launched a successful bike-share offering. Since then, the program has grown to a fleet of 5,824 bicycles that are geotracked and locked into a network of 692 stations across Chicago. The bikes can be unlocked form one station and returned to any other station in the system anytime.
+**Cyclistic:** A bike-share company based in Chicago, with a fleet of 5,824 bicycles that are geotracked and locked into a network of 692 stations across Chicago. The bikes can be unlocked from one station and returned to any other station in the system anytime. There are two types of users at Cyclistic: *annual members* and *casual customers*. 
 
-Until now, Cyclistic’s marketing strategy relied on building general awareness and appealing to broad consumer segments. Cyclistic’s finance analysts have concluded that annual members are much more profitable than casual riders. Thus, the marketing director (my manager) has set a clear goal: Design marketing strategies aimed at converting casual customers into annual subscribers. In order to do that, the team needs to better understand how annual subscribers and casual customers differ, why casual customers would buy a subscription, and how digital media could affect their marketing tactics. Our team are interested in analyzing the Cyclistic historical bike trip data to identify trends.
+### **Business Scenario**
+
+The company's finance analysts have concluded that annual members are much more profitable than casual riders. Thus, the marketing director (my manager) has set a clear goal: Design marketing strategies aimed at converting casual customers into annual subscribers. In order to do that, the team needs to better understand: 
+<br>
+
+* How annual subscribers and casual customers differ?
+* Why casual customers would buy a subscription?
+* How digital media could affect their marketing tactics?
+Our team is interested in analyzing the Cyclistic historical bike trip data to identify trends.
 
 ## **Ask Phase**
 
 ### **Business Tasks**
 
-As a data analyst on the marketing team, my job is to answer the question: **How do annual subscribers and casual customers use Cyclistic bikes differently?** I will present a detailed analysis supported by data visualizations, share the key findings, and provide recommendations accordingly.
+As a data analyst on the marketing team, my job is to answer the first question: **How do annual subscribers and casual customers use Cyclistic bikes differently?** I will present a detailed analysis supported by data visualizations, share the key findings, and provide recommendations accordingly.
 
 ### **Questions to be answered**
 
@@ -45,36 +48,38 @@ As a data analyst on the marketing team, my job is to answer the question: **How
 -   How do the demographics (e.g., birth year, gender) of subscribers compare to those of casual customers?
 
 ## **Prepare Phase**
+I analyzed Cyclistic's historical trip data from all four quarters of 2019 to identify trends. The data is downloaded from [here](https://divvy-tripdata.s3.amazonaws.com/index.html) and is provided by Motivate International Inc. under this [license](https://divvybikes.com/data-license-agreement). \n
+Each of the four files is contains twelve columns of data for all rides that occurred between January 2019 and December 2019. The credibility of the data source is confirmed.
 
-I analyzed Cyclistic's historical trip data from all four quarters of 2019 to identify trends. The data is downloaded from [here](https://divvy-tripdata.s3.amazonaws.com/index.html) and is provided by Motivate International Inc. under this [license](https://divvybikes.com/data-license-agreement). Each of the four files is contains twelve columns of data for all rides that occurred between January 2019 and December 2019. The credibility of the data source is confirmed.
-
-## **Process Phase**
-
-```{r install packages}
-# Load required packages
+## **Process Phase (Cleaning and Transformation)**
+Load required libraries and set global options
+```{r setup-libraries}
 library(tidyverse)
 library(dplyr)
 library(ggplot2)
 library(lubridate)
+knitr::opts_chunk$set(
+	echo = TRUE,
+	message = FALSE,
+	warning = FALSE
+)
 ```
-
-```{r upload datasets}
-# Upload the four CSV files for the trip data of 2019
+Upload the four CSV files for the trip data of 2019
+```{r upload-datasets}
 Q1_2019 <- read.csv("Divvy_Trips_2019_Q1.csv")
 Q2_2019 <- read.csv("Divvy_Trips_2019_Q2.csv")
 Q3_2019 <- read.csv("Divvy_Trips_2019_Q3.csv")
 Q4_2019 <- read.csv("Divvy_Trips_2019_Q4.csv")
 ```
-
+Review and compare column names of each file. While the names don't have to be in the same order, we want them to match perfectly before we use a command to combine them into one file.
 ```{r col names}
-# Review and compare column names of each file
-# While the names don't have to be in the same order, we want them to match perfectly before we use a command to combine them into one file
 colnames(Q1_2019)
 colnames(Q2_2019)
 colnames(Q3_2019)
 colnames(Q4_2019)
-
-# Q2 dataset's column names are different from the others. Rename columns to make Q2 data consistent with the other 3 quarters'.
+```
+Q2 dataset's column names are different from the others. Rename columns to make Q2 data consistent with the other 3 quarters'.
+```{r rename col}
 Q2_2019 <- rename(Q2_2019 
                   ,trip_id = X01...Rental.Details.Rental.ID
                   ,start_time = X01...Rental.Details.Local.Start.Time
@@ -90,105 +95,100 @@ Q2_2019 <- rename(Q2_2019
                   ,birthyear = X05...Member.Details.Member.Birthday.Year
                   )
 ```
-
-```{r inspect str}
-# Inspect the dataframes and look for incongruences. 
-str(Q1_2019)
-str(Q2_2019)
-str(Q3_2019)
-str(Q4_2019)
-# The data types are consistent across the four datasets for all columns, good to go for combining!
-```
-
+Combine the four datasets into one.
 ```{r combine datasets}
-# Combine the four datasets into one
 all_trips <- bind_rows(Q1_2019, Q2_2019, Q3_2019, Q4_2019)
 ```
+Remove any duplicate trips.
 ```{r remove duplicate}
-# Remove any duplicate trips
 all_trips <- all_trips %>% distinct()
 ```
+Check for missing values in each column.
 ```{r missing values}
-# Check for missing values in each column
 missing_values <- colSums(is.na(all_trips) | all_trips == "")
-# Print the number of missing values in each column
 print(missing_values)
-# Only gender and birthyear columns have missing values
-# 559206 rows with missing gender, percentage 14.6%
-# 537801 rows with missing birthyear, percentage 14.1%
-# Due to the high percentage of missing values in these two columns, we will retain them for further analysis that does not depend on these columns.
 ```
+Only gender and birthyear columns have missing values.
+  559206 rows with missing gender, percentage 14.6%.
+  537801 rows with missing birthyear, percentage 14.1%.
+Due to the high percentage of missing values in these two columns, we will retain them for further analysis that does not depend on these columns.
+
+Check data structures of the combined dataset.
 ```{r all_trips str}
-# check "all_trips" structure
 str(all_trips)
 ```
+Notice：
+  * start_time and end_time columns are characters. We want them to be Date-Time data for further     calculations and analysis.
+  * tripduration is character. We want it to be numeric for further calculations and analysis.
 
-```{r date-time conversion}
-# Convert start_time and end_time to Date-Time
+Convert start_time and end_time to Date-Time.
+```{r date-time_conversion}
 all_trips <- all_trips %>%
   mutate(start_time = ymd_hms(start_time),
          end_time = ymd_hms(end_time))
-
-# Convert tripduration to Numeric
+```
+Convert tripduration to Numeric.
+```{r tripduration_conversion}
 all_trips <- all_trips %>%
   mutate(tripduration = as.numeric(gsub(",", "", tripduration)))
-
-# Convert tripduration from seconds to minutes
+```
+Convert tripduration from seconds to minutes for calculation convenience.
+```{r tripduration_minutes}
 all_trips <- all_trips %>%
   mutate(tripduration_minutes = tripduration / 60)
-
-# verify the str again
-str(all_trips)
-
 ```
-
-```{r delete tripduration in sec}
-# delete tripduration in sec
+Verify the data structure again to make sure all data are in desired data types.
+```{r verify_str}
+str(all_trips)
+```
+More data cleaning.
+Delete tripduration in sec.
+```{r delete_tripduration_sec}
 clean_data <- all_trips %>%
   select(-tripduration)
 ```
-```{r round tripduration and range}
-# round tripduration_minutes to 2 decimal places
+Round tripduration_minutes to 2 decimal places.
+```{r round_tripduration}
 clean_data$tripduration_minutes <- round(clean_data$tripduration_minutes, 2)
-# check tripduration_minutes range
+```
+Check tripduration_minutes rage
+```{r tripduration_range}
 range(clean_data$tripduration_minutes)
 ```
-
-```{r check unique labels}
-# check unique labels for usertype
-unique(clean_data$usertype)
-
-# check unique labels for gender
-unique(clean_data$gender)
-```
-
-
-
+Notice that maximum trip duration is large. So we check how many trips are over 24h; they may be outliers and can be neglected.
 ```{r outliers}
-# check how many trips are over 24h; they may be outliers that can be neglected
 sum(clean_data$tripduration_minutes >= 1440)
-# trip over 24h percentage is 0.04%, can be treated as outliers and deleted from the dataset
+```
+Trip over 24h percentage is 0.04%, can be treated as outliers and deleted from the dataset.
+```{remove_outliers}
 clean_data <- (clean_data %>%
                  filter(tripduration_minutes < 1440))
 ```
-
+Check unique labels for usertype. Make sure there's only one label for each user type.
+```{r unique_usertype}
+unique(clean_data$usertype)
+```
+Check unique labels for gender. Make sure there's only one label for each gender.
+```{r unique_gender}
+unique(clean_data$gender)
+```
+See the numeric summaries of the cleaned data.
 ```{r summary}
-# See the numeric summaries of the cleaned dataset
 summary(clean_data)
 ```
+The data is now cleaned and transformed into desired format. Ready for further analysis!
+
 
 ## **Analyze and Share**
-
+Total trip counts for both user types.
 ```{r total trip counts}
-# Calculate total trip counts for both user types
 total_trips <- clean_data %>%
   group_by(usertype) %>%
   summarize(count = n())
-# Format the count with commas
-total_trips$count <- format(total_trips$count, big.mark = ",")
-print(total_trips)
-```
 
+total_trips$count <- format(total_trips$count, big.mark = ",")
+```
+Create pie chart to show total counts and proportions of both user types.
 ```{r pie chart}
 # Format count back to number
 total_trips$count_num <- as.numeric(gsub(",", "", total_trips$count))
@@ -196,9 +196,8 @@ total_trips$count_num <- as.numeric(gsub(",", "", total_trips$count))
 total_trips <- total_trips %>%
   mutate(percentage = count_num / sum(count_num) * 100)
 
-# Create pie chart with percentages
-ggplot(total_trips, aes(x = "", y = count, fill = usertype)) +
-  geom_bar(stat = "identity", width = 1) +
+ggplot(total_trips, aes(x = "", y = percentage, fill = usertype)) +
+  geom_bar(stat = "identity") +
   coord_polar(theta = "y") +
   labs(title = "Proportion of Total Trips by User Type") +
   geom_text(aes(label = paste0(usertype, "\n", count, "\n", round(percentage, 1), "%")),
@@ -206,35 +205,15 @@ ggplot(total_trips, aes(x = "", y = count, fill = usertype)) +
   theme_void() +
   theme(plot.title = element_text(hjust = 0.5),
         legend.position = "none")
-
 ```
-
+<br>
+Create histogram to show trip duration distributions for both user types.
 ```{r avg trip duration by usertype}
 # Calculate average trip duration for each user type
 avg_tripduration <- clean_data %>%
   group_by(usertype) %>%
   summarize(avg_tripduration_minutes = round(mean(tripduration_minutes, na.rm = TRUE), 1))
-
-# Print the result
-avg_tripduration
 ```
-
-```{r bar chart avg trip duration}
-# Bar chart for average trip duration by user type
-ggplot(data = avg_tripduration, aes(x = usertype, y = avg_tripduration_minutes, fill = usertype)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(label = paste(avg_tripduration_minutes, "min")), vjust = -0.5, size = 4, color = "black") +
-  labs(title = "Average Trip Duration by User Type",
-       x = "",
-       y = "Average Trip Duration") +
-  theme_minimal() +
-  guides(fill = FALSE) +
-  theme(axis.text.x = element_text(size = 12, face = "bold"),  # Adjust axis text properties
-        axis.text.y = element_text(size = 12, face = "bold"),
-        plot.title = element_text(hjust = 0.5))
-
-```
-
 ```{r trip duration distribution}
 ggplot(clean_data, aes(x = tripduration_minutes, fill = usertype)) +
   geom_histogram(binwidth = 10, boundary = 0, position = "dodge", color = "black") +
@@ -247,23 +226,24 @@ ggplot(clean_data, aes(x = tripduration_minutes, fill = usertype)) +
   theme_minimal() +
   theme(
     plot.title = element_text(hjust = 0.5),
-    legend.position = "NONE")
-
-# Trip durations for casual customers typically range between 10 and 30 minutes, whereas trip durations for subscribers mostly fall within the 0 to 20 minute range.
+    legend.position = "NONE") +
+  geom_vline(data = avg_tripduration, aes(xintercept = avg_tripduration_minutes, color = usertype), linetype = "dashed", size = 1) +
+  geom_text(data = avg_tripduration, aes(x = avg_tripduration_minutes, y = Inf, label = paste("Avg:", avg_tripduration_minutes, "min")),
+            vjust = -0.5, hjust = 1.1, size = 3.5, color = "black", angle = 90)
 ```
+<br>
+The average trip duration for casual customers is significantly higher at 57 minutes compared to 14.3 minutes for subscribers. Casual customers typically have trip durations ranging from 10 to 30 minutes, while subscribers mostly have trip durations within the 0 to 20 minute range.
 
+Move on to weekday/weekend analysis.
 ```{r add weekday col}
 # add a column that shows day of the week (1 for Sunday through 7 for Saturday)
 clean_data$day_of_week <- wday(clean_data$start_time, label = FALSE)
 ```
-
 ```{r weekday_or_weekend col}
 # add a column that shows if it's weekend or weekday
 clean_data$weekday_or_weekend <- ifelse(clean_data$day_of_week %in% c(1, 7), "Weekend", "Weekday")
 ```
-
 ```{r avg trip counts and duration for weekday/weekend}
-
 # Calculate average trip counts and average trip duration for weekdays and weekends for subscribers and casual customers
 daily_summary <- clean_data %>%
   mutate(day = as.Date(start_time)) %>%  # Extract the day from start_time
@@ -283,38 +263,39 @@ average_daily_summary <- daily_summary %>%
     .groups = 'drop'
   ) %>%
   arrange(usertype, weekday_or_weekend)
-
-# Print the average daily summary as one table
-print(average_daily_summary)
-
-# Insights from the table:
-# Customers tend to use the bike service more on weekends compared to weekdays, indicating potential leisure needs.
-# Subscribers show higher usage overall, particularly on weekdays, indicating potential commuting patterns.
-# Average trip durations are generally shorter for Subscribers compared to Customers across both weekdays and weekends.
 ```
+Create a grouped bar chart to show average daily trip counts and durations by user type and day type.
+```{r grouped_bar}
+# Reshape the data for plotting
+average_daily_summary_long <- average_daily_summary %>%
+  pivot_longer(cols = c(avg_daily_trip_count, avg_daily_tripduration_minutes), 
+               names_to = "metric", values_to = "value")
 
-```{r weekday/weekend bar charts}
-# Create bar chart with labels inside bars
-ggplot(average_daily_summary, aes(x = weekday_or_weekend, y = avg_daily_trip_count, fill = usertype)) +
-  geom_bar(stat = "identity", position = position_dodge(width = 0.9)) +
-  geom_text(aes(label = avg_daily_trip_count), 
+# Create the grouped bar chart
+ggplot(average_daily_summary_long, aes(x = weekday_or_weekend, y = value, fill = usertype)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  facet_wrap(~ metric, scales = "free_y", ncol = 1) +
+  geom_text(aes(label = value), 
              position = position_dodge(width = 0.9),
-            vjust = -0.5, size = 4, color = "black") +
-  geom_text(aes(y = 0, label = usertype), 
-            position = position_dodge(width = 0.9), 
-            vjust = 1.2, size = 4, color = "black") +
-  labs(title = "Average Daily Trips by User Type and Day Type",
+            vjust = 0.5, size = 4, color = "black") +
+  labs(title = "Comparison of Daily Trip Counts and Durations",
        x = "",
-       y = "Average Daily Trips") +
+       y = "Value",
+       fill = "User Type") +
   theme_minimal() +
-  theme(axis.text.x = element_text(size = 12, face = "bold"),  # Adjust axis text properties
-        axis.text.y = element_text(size = 12, face = "bold"),
-        legend.position = "none",
-        plot.title = element_text(hjust = 0.5))
-
+  theme(plot.title = element_text(hjust = 0.5))
 ```
+<br>
+Insights from the chart:
+<br>
 
-```{r peak hours}
+* Customers tend to use the bike service more on weekends compared to weekdays, indicating potential leisure needs.
+* Subscribers show higher usage overall, particularly on weekdays, indicating potential commuting patterns.
+* Average trip durations are generally shorter for Subscribers compared to Customers across both weekdays and weekends.
+
+Moving on to Peak Hour analysis.
+```{r}
+# Extract the hours
 clean_data <- clean_data %>%
   mutate(hour = hour(start_time))
 
@@ -325,8 +306,9 @@ top_trip_counts <- clean_data %>%
   arrange(desc(trip_count)) %>%
   group_by(weekday_or_weekend, usertype) %>%
   top_n(2, trip_count)  # Select top 2 trips for each usertype and weekday/weekend
-
-# Create the histograms
+```
+Create the histogram to show trip counts by hour for each user type and day type.
+```{r peak_hour_histogram}
 ggplot(clean_data, aes(x = hour, fill = usertype)) +
   geom_histogram(binwidth = 1, position = "dodge", color = "black") +
   facet_wrap(~ weekday_or_weekend + usertype, ncol = 2, scales = "free_x") +
@@ -346,9 +328,10 @@ ggplot(clean_data, aes(x = hour, fill = usertype)) +
   geom_text(data = top_trip_counts, aes(label = hour, y = trip_count + 2), 
             position = position_dodge(width = 1), size = 3, vjust = -0.5, color = "black")
 ```
-
+<br>
+Now let's do Seasonal analysis.
 ```{r seasonal}
-# categorize the trips into four seasons
+# Categorize the trips into four seasons
 clean_data <- clean_data %>%
   mutate(season = case_when(
     month(start_time) %in% c(12, 1, 2) ~ "Winter",
@@ -357,7 +340,7 @@ clean_data <- clean_data %>%
     month(start_time) %in% c(9, 10, 11) ~ "Fall"
   ))
 
-# # Group by season and usertype
+# Group by season and usertype
 seasonal_summary <- clean_data %>%
   mutate(season = factor(season, levels = c("Spring", "Summer", "Fall", "Winter"))) %>%
   group_by(usertype, season) %>%
@@ -366,12 +349,9 @@ seasonal_summary <- clean_data %>%
     avg_trip_duration_minutes = mean(tripduration_minutes, na.rm = TRUE)
   ) %>%
   arrange(usertype, season)
-
-print(seasonal_summary)
 ```
-
+Create the seasonal plot: a grouped bar chart to show total trips by season and user type.
 ```{r seasonal plot}
-# Plotting the grouped bar chart
 ggplot(seasonal_summary, aes(x = season, y = total_trips, fill = usertype)) +
   geom_bar(stat = "identity", position = "dodge") +
   labs(
@@ -388,62 +368,51 @@ ggplot(seasonal_summary, aes(x = season, y = total_trips, fill = usertype)) +
     plot.title = element_text(size = 14, face = "bold", hjust = 0.5)
   )
 ```
-
-```{r top start stations}
+<br>
+Now we explore most poplular stations for both user types.
+```{r top_start_stations}
+# Sort the start stations by trip counts for both user types.
 popular_start_stations <- clean_data %>%
   group_by(from_station_name, usertype) %>%
   summarize(trip_count = n()) %>%
   arrange(usertype, desc(trip_count))
 
+# Filter the most popular 10 start stations for both user types.
 top_start_stations <- popular_start_stations %>%
   group_by(usertype) %>%
   top_n(10, trip_count)
-
-# Now do some adjustments for smooth combination and plot
-# Rename station column
-top_start_stations <- top_start_stations %>%
-  rename(station_name = from_station_name)
-
-# Add size column
-top_start_stations$size <- sqrt(top_start_stations$trip_count) * 2
-
-# Add a column for plots's label
-top_start_stations$usertype_start_end <- paste(top_start_stations$usertype, "_start", sep = "")
-
-print(top_start_stations)
 ```
-
-```{r top to stations}
+```{r top_end_stations}
+# Sort the end stations by trip counts for both user types.
 popular_end_stations <- clean_data %>%
   group_by(to_station_name, usertype) %>%
   summarize(trip_count = n()) %>%
   arrange(usertype, desc(trip_count))
 
+# Filter the most popular 10 end stations for both user types.
 top_end_stations <- popular_end_stations %>%
   group_by(usertype) %>%
   top_n(10, trip_count)
+```
+We want to combine the info in one plot. So we need to rename the columns to make them consistent.
+```{r rename_stations}
+top_start_stations <- top_start_stations %>%
+  rename(station_name = from_station_name)
 
-# Now do some adjustments for smooth combination and plot
-# Rename column
 top_end_stations <- top_end_stations %>%
   rename(station_name = to_station_name)
-
+```
+Create a bubble plot to show most popular start stations and end stations for both user types.
+```{r station_plot}
 # Add size column
+top_start_stations$size <- sqrt(top_start_stations$trip_count) * 2
 top_end_stations$size <- sqrt(top_end_stations$trip_count) * 2
-
-# Add a column for plot's label
+# Add a column for plots's label
+top_start_stations$usertype_start_end <- paste(top_start_stations$usertype, "_start", sep = "")
 top_end_stations$usertype_start_end <- paste(top_end_stations$usertype, "_end", sep = "")
-
-print(top_end_stations)
-```
-
-```{r combine stations}
-# combine top start and end stations for further visualization
+# combine top start and end stations for combined visualization
 combined_stations <- union(top_start_stations, top_end_stations)
-
-```
-
-```{r top station plot}
+# Create the plot
 ggplot(combined_stations, aes(x = station_name, y = usertype_start_end, size = size, fill = usertype)) +
   geom_point(shape = 21, color = "black", aes(fill = usertype), stroke = 1) +
   scale_size(range = c(3, 18)) +
@@ -461,9 +430,13 @@ ggplot(combined_stations, aes(x = station_name, y = usertype_start_end, size = s
     legend.position = "NONE",
     plot.title = element_text(size = 14, face = "bold", hjust = 0.4)
   )
-# Insight: The top start and end stations are generally consistent within the same user type. However, there is little overlap in the top stations between different user types.
 ```
+<br>
+Insight: The top start and end stations are generally consistent within the same user type. However, there is little overlap in the top stations between different user types.
 
+Let's also do a demographic (gender & birth year) analysis.
+Remember we have trip data with missing gender or birth year info. For this analysis, we need to filter out the data with missing information.
+Gender analysis:
 ```{r gender}
 # Clean the data for gender analysis.
 data_with_gender <- clean_data %>%
@@ -493,10 +466,11 @@ ggplot(gender_proportions, aes(x = usertype, y = proportion, fill = gender)) +
             position = position_stack(vjust = 0.5), color = "white", size = 5) +
   theme(legend.position = "none",  # Remove legend
         plot.title = element_text(hjust = 0.5))  # Center plot title
-
-
 ```
+<br>
+Insight: Male customers have dominating positions in both user types. Female proportion of casual customers is slightly higher than that of subscribers.
 
+Birth year analysis:
 ```{r birthyear}
 # clean the data for birthyear analysis
 data_with_birthyear <- clean_data %>%
@@ -512,9 +486,9 @@ ggplot(data_with_birthyear, aes(x = birthyear, fill = usertype)) +
        fill = "User Type") +
   theme_minimal() +
   xlim(1940, 2010)
-
-# Insight: The majority of users are born between 1980 and 2000. Casual customers are predominantly born between 1990 and 2000, while subscribers are mostly born between 1980 and 1990.
 ```
+<br>
+Insight: The majority of users are born between 1980 and 2000. Casual customers are predominantly born between 1990 and 2000, while subscribers are mostly born between 1980 and 1990.
 
 ## **Key Findings**
 
@@ -563,3 +537,6 @@ ggplot(data_with_birthyear, aes(x = birthyear, fill = usertype)) +
 6.  **Seasonal Promotions:** Launch seasonal campaigns that offer discounts or special benefits for new subscribers, especially during the summer when usage peaks. Highlight the advantages of being a subscriber during the high-demand season.
 
 7.  **Station-Based Incentives:** Implement incentives at popular casual user stations (Streeter Dr & Grand Ave, Lake Shore Dr & Monroe St, and Millennium Park) to encourage sign-ups. For example, set up subscription kiosks with promotional offers or host events at these locations.
+
+
+
